--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <h1>My First Cloud Deployment</h1>
 <h2>Hello, my name is ALDRIN DENOPOL</h2>
-<img src="C:\Users\Aldrin\Downloads" width="200"/>
+<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.imdb.com%2Fname%2Fnm1306030%2F&psig=AOvVaw2ATwptzBn7q8cK2bmw3IRl&ust=1763522568346000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCOjx_dPf-pADFQAAAAAdAAAAABAE" width="200"/>
 <p>This is my first deployed website!</p>
+
 
