--- a/index.html
+++ b/index.html
@@ -1,6 +1,77 @@
-<h1>My First Cloud Deployment</h1>
-<h2>Hello, my name is ALDRIN DENOPOL</h2>
-<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.imdb.com%2Fname%2Fnm1306030%2F&psig=AOvVaw2ATwptzBn7q8cK2bmw3IRl&ust=1763522568346000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCOjx_dPf-pADFQAAAAAdAAAAABAE" width="200"/>
-<p>This is my first deployed website!</p>
+<!DOCTYPE html>
+text-align: center;
+}
+section {
+padding: 40px 20px;
+max-width: 900px;
+margin: auto;
+background: #fff;
+margin-top: 20px;
+border-radius: 10px;
+}
+h2 {
+margin-top: 0;
+}
+.projects {
+display: grid;
+grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+gap: 20px;
+}
+.card {
+background: #fafafa;
+padding: 20px;
+border-radius: 8px;
+box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+footer {
+text-align: center;
+padding: 20px;
+font-size: 14px;
+color: #444;
+}
+</style>
+</head>
+<body>
+<header>
+<h1>My Portfolio</h1>
+<p>Graphic Designer • Developer • Creator</p>
+</header>
 
 
+<section>
+<h2>About Me</h2>
+<p>Hello! I'm Al, a designer and aspiring developer. I create digital designs, layouts, and projects that combine creativity and functionality.</p>
+</section>
+
+
+<section>
+<h2>Projects</h2>
+<div class="projects">
+<div class="card">
+<h3>Project 1</h3>
+<p>A short description of your project.</p>
+</div>
+<div class="card">
+<h3>Project 2</h3>
+<p>A short description of your project.</p>
+</div>
+<div class="card">
+<h3>Project 3</h3>
+<p>A short description of your project.</p>
+</div>
+</div>
+</section>
+
+
+<section>
+<h2>Contact</h2>
+<p>Email: yourname@example.com</p>
+<p>GitHub: github.com/yourprofile</p>
+</section>
+
+
+<footer>
+© 2025 Al. All Rights Reserved.
+</footer>
+</body>
+</html>
