--- a/index.html
+++ b/index.html
@@ -1,77 +1,21 @@
 <!DOCTYPE html>
-text-align: center;
-}
-section {
-padding: 40px 20px;
-max-width: 900px;
-margin: auto;
-background: #fff;
-margin-top: 20px;
-border-radius: 10px;
-}
-h2 {
-margin-top: 0;
-}
-.projects {
-display: grid;
-grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-gap: 20px;
-}
-.card {
-background: #fafafa;
-padding: 20px;
-border-radius: 8px;
-box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-}
-footer {
-text-align: center;
-padding: 20px;
-font-size: 14px;
-color: #444;
-}
-</style>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Al Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<header>
-<h1>My Portfolio</h1>
-<p>Graphic Designer • Developer • Creator</p>
-</header>
+  <header class="hero">
+    <div class="overlay"></div>
+    <div class="hero-content">
+      <h1>Al — Portfolio</h1>
+      <p>Graphic Designer • Digital Creator • Visual Storyteller</p>
+    </div>
+  </header>
 
-
-<section>
-<h2>About Me</h2>
-<p>Hello! I'm Al, a designer and aspiring developer. I create digital designs, layouts, and projects that combine creativity and functionality.</p>
-</section>
-
-
-<section>
-<h2>Projects</h2>
-<div class="projects">
-<div class="card">
-<h3>Project 1</h3>
-<p>A short description of your project.</p>
-</div>
-<div class="card">
-<h3>Project 2</h3>
-<p>A short description of your project.</p>
-</div>
-<div class="card">
-<h3>Project 3</h3>
-<p>A short description of your project.</p>
-</div>
-</div>
-</section>
-
-
-<section>
-<h2>Contact</h2>
-<p>Email: yourname@example.com</p>
-<p>GitHub: github.com/yourprofile</p>
-</section>
-
-
-<footer>
-© 2025 Al. All Rights Reserved.
-</footer>
-</body>
-</html>
+  <section class="about section">
+    <h2>About Me</h2>
+    <p>
+      Hi, I'm A
