--- a/index.html
+++ b/index.html
@@ -18,4 +18,44 @@
   <section class="about section">
     <h2>About Me</h2>
     <p>
-      Hi, I'm A
+      Hi, I'm Al — a graphic designer who creates clean, modern, and engaging visual content. 
+      I specialize in layouts, tarpaulins, digital graphics, and creative concepts. My goal is to turn ideas into visuals that communicate clearly and beautifully.
+    </p>
+  </section>
+
+  <section class="projects section">
+    <h2>Featured Projects</h2>
+    <div class="project-grid">
+
+      <div class="project-card">
+        <img src="images/project1.jpg" alt="Project 1" />
+        <h3>Project 1 Title</h3>
+        <p>Short description of the project.</p>
+      </div>
+
+      <div class="project-card">
+        <img src="images/project2.jpg" alt="Project 2" />
+        <h3>Project 2 Title</h3>
+        <p>Short description of the project.</p>
+      </div>
+
+      <div class="project-card">
+        <img src="images/project3.jpg" alt="Project 3" />
+        <h3>Project 3 Title</h3>
+        <p>Short description of the project.</p>
+      </div>
+
+    </div>
+  </section>
+
+  <section class="contact section">
+    <h2>Contact</h2>
+    <p>Email: yourname@example.com</p>
+    <p>GitHub: github.com/yourprofile</p>
+  </section>
+
+  <footer>
+    © 2025 Al — All Rights Reserved.
+  </footer>
+</body>
+</html>
