--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="project-grid">
 
       <div class="project-card">
-        <img src="images/project1.jpg" alt="Project 1" />
+        <img src="https://static.wikia.nocookie.net/its-showtime/images/7/77/Ogie_portal.jpg/revision/latest?cb=20240521124041" alt="Project 1" />
         <h3>Project 1 Title</h3>
         <p>Short description of the project.</p>
       </div>
@@ -59,3 +59,4 @@
   </footer>
 </body>
 </html>
+
