--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <header class="hero">
     <div class="overlay"></div>
     <div class="hero-content">
-      <h1>Al — Portfolio</h1>
-      <p>Graphic Designer • Digital Creator • Visual Storyteller</p>
+      <h1>Aldrin — Portfolio</h1>
+      <p>Graphic Designer • Digital Creator • DevOps</p>
     </div>
   </header>
 
@@ -24,24 +24,24 @@
   </section>
 
   <section class="projects section">
-    <h2>Featured Projects</h2>
+    <h2>Inspirations</h2>
     <div class="project-grid">
 
       <div class="project-card">
         <img src="https://static.wikia.nocookie.net/its-showtime/images/7/77/Ogie_portal.jpg/revision/latest?cb=20240521124041" alt="Project 1" />
-        <h3>Project 1 Title</h3>
+        <h3>OG Alcasid</h3>
         <p>Short description of the project.</p>
       </div>
 
       <div class="project-card">
         <img src="images/project2.jpg" alt="Project 2" />
-        <h3>Project 2 Title</h3>
+        <h3>Ogie Diaz</h3>
         <p>Short description of the project.</p>
       </div>
 
       <div class="project-card">
         <img src="images/project3.jpg" alt="Project 3" />
-        <h3>Project 3 Title</h3>
+        <h3>Ogie and the Cockroaches</h3>
         <p>Short description of the project.</p>
       </div>
 
@@ -59,4 +59,5 @@
   </footer>
 </body>
 </html>
+
 
