--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
 
       <div class="project-card">
         <img src="https://static.wikia.nocookie.net/its-showtime/images/7/77/Ogie_portal.jpg/revision/latest?cb=20240521124041" alt="Project 1" />
-        <h3>OG Alcasid</h3>
-        <p>Short description of the project.</p>
+        <h3>Ferdinance Dela Merced</h3>
+        <p>Best looper of all time.</p>
       </div>
 
       <div class="project-card">
         <img src="images/project2.jpg" alt="Project 2" />
-        <h3>Ogie Diaz</h3>
-        <p>Short description of the project.</p>
+        <h3>Sherwinabols</h3>
+        <p>Happy lang.</p>
       </div>
 
       <div class="project-card">
         <img src="images/project3.jpg" alt="Project 3" />
-        <h3>Ogie and the Cockroaches</h3>
-        <p>Short description of the project.</p>
+        <h3>Shamcey</h3>
+        <p>Tital Rachel on the mix.</p>
       </div>
 
     </div>
@@ -50,14 +50,11 @@
 
   <section class="contact section">
     <h2>Contact</h2>
-    <p>Email: yourname@example.com</p>
-    <p>GitHub: github.com/yourprofile</p>
+    <p>Email: secret@gmail.com.com</p>
+    <p>GitHub: github.com/secret</p>
   </section>
-
-  <footer>
-    © 2025 Al — All Rights Reserved.
-  </footer>
 </body>
 </html>
+
 
 
