--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="project-grid">
 
       <div class="project-card">
-        <img src="https://static.wikia.nocookie.net/its-showtime/images/7/77/Ogie_portal.jpg/revision/latest?cb=20240521124041" alt="Project 1" />
+        <img src="https://github.com/crus7y/Cloud-DevOps-Basics/shamcey.png" alt="Project 1" />
         <h3>Ferdinance Dela Merced</h3>
         <p>Best looper of all time.</p>
       </div>
@@ -55,6 +55,7 @@
   </section>
 </body>
 </html>
+
 
 
 
