--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
 
       <div class="project-card">
-        <img src="images/project3.jpg" alt="Project 3" />
+        <img src="Shamcey.PNG" alt="Project 3" />
         <h3>Shamcey</h3>
         <p>Tital Rachel on the mix.</p>
       </div>
@@ -55,6 +55,7 @@
   </section>
 </body>
 </html>
+
 
 
 
