--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
     <div class="project-grid">
 
       <div class="project-card">
-        <img src="https://github.com/crus7y/Cloud-DevOps-Basics/shamcey.png" alt="Project 1" />
+        <img src="images.jfif" alt="Project 1" />
         <h3>Ferdinance Dela Merced</h3>
         <p>Best looper of all time.</p>
       </div>
 
       <div class="project-card">
-        <img src="images/project2.jpg" alt="Project 2" />
-        <h3>Sherwinabols</h3>
-        <p>Happy lang.</p>
+        <img src="Brader.jfif" alt="Project 2" />
+        <h3>Brader</h3>
+        <p>Balance ang Matrix.</p>
       </div>
 
       <div class="project-card">
@@ -55,6 +55,7 @@
   </section>
 </body>
 </html>
+
 
 
 
