--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Al Portfolio</title>
+  <title>Aldrin's Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -55,6 +55,7 @@
   </section>
 </body>
 </html>
+
 
 
 
